# cassobee

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  httpprotocol.cpp  httpprotocol.h  httpsession_manager.cpp  httpsession_manager.h  sonar-project.properties  websocket_session.cpp  websocket_session.h
.scannerwork/: report-task.txt
cmake/: fastbuild_gen.cmake
config/: cassobee.conf  client.conf  logserver.conf  tables_define.xml
progen/: general.xml  log.xml  login.xml  protocol.xml
source/: CMakeLists.txt  client.cpp  client_manager.h  log.h  main.cpp  marshal.h  octets.cpp  types.h  util.cpp  util.h
source/async_threadpool/: test  test.cpp  threadpool.h
source/async_threadpool/cp/: test  test.cpp  threadpool.h
source/bee/: CMakeLists.txt
source/bee/cli/: CMakeLists.txt  app_commands.h  command.cpp  command.h  command_line.cpp  command_line.h  command_parser.h  errcode.h
source/bee/common/: command_line.cpp  command_line.h  common.cpp  common.h  config.cpp  config.h  console_color.h  entity.h  event_dispatcher.h  id_gen.h  lock.h  macros.h  marshal.h  objectpool.h  observer.h  octets.h  randgen.cpp  randgen.h  runnable.h  systemtime.h  timewheel.cpp  timewheel.h  types.h  varint.h
source/bee/database/: CMakeLists.txt  cmysql.cpp  cmysql.h  connection.h  connection_pool.cpp  connection_pool.h  connectionpool.cpp  connectionpool.h  db.cpp  db.h  table_creator.cpp  table_creator.h
source/bee/database/mysql/: cmysql.cpp  cmysql.h
source/bee/format/: format.cpp  format.h  formatter.h  stringfy.cpp  stringfy.h
source/bee/http/: http.cpp  http.h  http_parser.h  http_task.h  httpclient.cpp  httpclient.h  httpprotocol.cpp  httpprotocol.h  httpserver.cpp  httpserver.h  httpsession.cpp  httpsession.h  httpsession_manager.cpp  httpsession_manager.h  servlet.cpp  servlet.h  uri.cpp  uri.h  websocket_session.h
source/bee/http/internal/: http_callback.h  http_task.h  httpsession.cpp  httpsession.h  httpsession_manager.cpp  httpsession_manager.h  servlet.cpp  servlet.h
source/bee/http/servlets/: config_servlet.cpp  config_servlet.h
source/bee/io/: address.cpp  address.h  bytes_order.h  demultiplexer.cpp  demultiplexer.h  event.cpp  event.h  ioevent.cpp  ioevent.h  protocol.cpp  protocol.h  reactor.cpp  reactor.h  rpc.cpp  rpc.h  rpcdata.cpp  rpcdata.h  session.cpp  session.h  session_manager.cpp  session_manager.h  sslio_event.cpp  sslio_event.h  traffic_shaper.h
source/bee/log/: glog.cpp  glog.h  influxlog_event.cpp  influxlog_event.h  log.cpp  log.h  log_appender.cpp  log_appender.h  log_event.cpp  log_event.h  log_formatter.cpp  log_formatter.h  log_rotator.cpp  log_rotator.h  logger.cpp  logger.h  logserver_manager.cpp  logserver_manager.h
source/bee/meta/: reflection.h  reflection_generator.cpp
source/bee/monitor/: influxlog.h  metric.cpp  metric.h  metric_collector.h  metric_exporter.h  monitor.cpp  monitor.h
source/bee/monitor/collectors/: cpu_collector.h  disk_collector.h  mem_collector.h  net_collector.h  proc_collector.h
source/bee/monitor/metrics/: protocol_metric.h
source/bee/security/: CMakeLists.txt  README.md  crypt.cpp  crypt.h
source/bee/thread/: async_threadpool.h  cc_changelist.h  double_buffer.h  left_right.h  lock.h  lr_deque.h  lr_list.h  lr_map.h  lr_set.h  lr_unordered_map.h  lr_vector.h  threadpool.cpp  threadpool.h
source/bee/traits/: concept.h  stringfy.h  traits.h  type_traits.h
source/bee/utility/: cc_changelist.h  delegate.h  factory.h  fixed_buffer.h  format.h  format_util.h  left_right.h  load_balance.h  ring_buffer.h  stringfy.h  util.cpp  util.h
source/bee/websocket/: websocket_session.h
source/benchmark/: CMakeLists.txt
source/benchmark/reactor/: server  server.cpp
source/casso/: CMakeLists.txt  main.cpp
source/casso/network/: client_manager.h  logserver_manager.h
source/client/: .cliinit  CMakeLists.txt  app_command.h  client.cpp  server_manager.h
source/client/network/: server_manager.cpp  server_manager.h
source/common/: async_threadpool.h  block_list.h  bytes_order.h  common.cpp  common.h  config.cpp  config.h  delegate.h  demultiplexer.cpp  demultiplexer.h  event.cpp  event.h  factory.h  fixed_buffer.h  lock.h  log.cpp  log.h  macros.h  marshal.h  objectpool.h  octets.h  reactor.cpp  reactor.h  stringfy.h  systemtime.h  threadpool.cpp  threadpool.h  timewheel.cpp  timewheel.h  types.h  util.cpp  util.h
source/common/io/: address.h  bytes_order.h  demultiplexer.cpp  demultiplexer.h  event.cpp  event.h  ioevent.cpp  ioevent.h  protocol.cpp  protocol.h  reactor.h  rpc.h  session.cpp  session.h  session_manager.cpp  session_manager.h
source/common/logger/: log.cpp  log.h  log_appender.cpp  log_appender.h  log_formatter.cpp  log_formatter.h
source/common/security/: crypt.h
source/common/traits/: concept.h  stringfy.h  traits.h
source/common/utility/: delegate.h  factory.h  fixed_buffer.h  ring_buffer.h
source/delegate/: delegate.h
source/httpserver/: demultiplexer.cpp  demultiplexer.h  event.cpp  event.h  reactor.h  test.cpp
source/logclient/: CMakeLists.txt  glog.cpp  glog.h  log_appender.h  log_formatter.cpp  log_formatter.h  logclient.cpp  logclient.h  logserver_manager.cpp  logserver_manager.h
source/logserver/: CMakeLists.txt  log_appender.h  log_formatter.cpp  log_formatter.h  log_manager.cpp  log_manager.h  logger.cpp  logger.h  logserver.cpp
source/logserver/network/: logclient_manager.cpp  logclient_manager.h
source/network/: iouring_server.cpp
source/objectpool/: objectpool.h  test  test.cpp
source/protocol/: prot_define.h
source/reactor/: block_list.h  demultiplexer.cpp  demultiplexer.h  event.cpp  event.h  reactor.cpp  server.cpp
source/reactor/client/: epoll_et.cpp
source/test/: test_benchpredict  test_benchpredict.cpp  test_template  test_template.cpp
source/threadpool/: test  test.cpp  test1  test1.cpp  threadpool.cpp  threadpool.h
tools/: add_color  analyze_compiletime  analyze_compiletime_report  analyze_deps  bash_color  build_thirdparty  completions  cs  fb  gen_doxydoc  genconf  git_history  (+15 more)
(+47 files in other folders)
